# Knapsack-Solver

./: .gitignore  CMakeLists.txt  Knapsack.cpp  Knapsack.h  KnapsackParallel.cpp  KnapsackParallel.h  KnapsackSingle.cpp  KnapsackSingle.h  README.md  knapsack.h  knapsackSingle.cpp  knapsackSingle.h  main.cpp  runTests.sh  utils.cpp  utils.h
data/: pub02.in  pub03.in  pub04.in  pub05.in  pub06.in  pub07.in  pub08.in  pub09.in  pub10.in  pub11.in  pub12.in  pub13.in  pub14.in  pub15.in
src/: main.cpp
src/knapsack/: Knapsack.cpp  Knapsack.h
src/knapsackParallel/: KnapsackParallel.cpp  KnapsackParallel.h
src/knapsackSingle/: KnapsackSingle.cpp  KnapsackSingle.h
src/utils/: utils.h
